--- a/app/src/main/res/layout/list_item_city.xml
+++ b/app/src/main/res/layout/list_item_city.xml
@@ -44,7 +44,7 @@
             android:layout_height="fill_parent"
             android:layout_marginTop="4dp"
             android:layout_marginBottom="4dp"
-            android:background="@android:color/darker_gray" />
+            android:background="@color/lightGray" />
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/infoIV"
