--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#3d5afe</color>
     <color name="colorPrimaryDark">#0031ca</color>
     <color name="colorAccent">#8187ff</color>
+    <color name="lightGray">#e9e9e9</color>
 </resources>
