--- a/app/src/main/res/layout/fragment_city_list.xml
+++ b/app/src/main/res/layout/fragment_city_list.xml
@@ -31,7 +31,7 @@
         android:layout_height="match_parent"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
-        tools:context=".features.main.view.CityFragment"
+        tools:context=".features.clitylist.view.CityFragment"
         tools:listitem="@layout/list_item_city" />
 </LinearLayout>
 
