--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -4,127 +4,146 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".features.about.AboutActivity">
+    tools:context=".features.about.AboutActivity"
+    >
+
+  <LinearLayout
+      android:id="@+id/infoContainer"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:orientation="vertical"
+      android:visibility="gone"
+      >
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/infoContainer"
-        android:visibility="gone"
-        android:orientation="vertical">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        >
 
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Company name: "/>
+      <TextView
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:text="Company name: "
+          />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/companyName"
-                tools:text="Backbase" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Company address: "/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/companyAdress"
-                tools:text="Backbase" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Company city: "/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/companyCity"
-                tools:text="Backbase" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Company postal: "/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/companypostal"
-                tools:text="Backbase" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="About: "/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/aboutInfo"
-                tools:text="Backbase" />
-
-        </LinearLayout>
+      <TextView
+          android:id="@+id/companyName"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          tools:text="Backbase"
+          />
 
     </LinearLayout>
 
-    <ProgressBar
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:visibility="gone"
-        android:id="@+id/progressBar"/>
+        android:orientation="horizontal"
+        >
 
-    <TextView
-        android:layout_width="wrap_content"
+
+      <TextView
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:text="Company address: "
+          />
+
+      <TextView
+          android:id="@+id/companyAdress"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          tools:text="Backbase"
+          />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Loading Failed"
-        android:visibility="gone"
-        style="@style/TextAppearance.AppCompat.Medium"
-        android:layout_centerInParent="true"
-        android:id="@+id/errorView"/>
+        android:orientation="horizontal"
+        >
+
+
+      <TextView
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:text="Company city: "
+          />
+
+      <TextView
+          android:id="@+id/companyCity"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          tools:text="Backbase"
+          />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        >
+
+
+      <TextView
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:text="Company postal: "
+          />
+
+      <TextView
+          android:id="@+id/companypostal"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          tools:text="Backbase"
+          />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        >
+
+
+      <TextView
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:text="About: "
+          />
+
+      <TextView
+          android:id="@+id/aboutInfo"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          tools:text="Backbase"
+          />
+
+    </LinearLayout>
+
+  </LinearLayout>
+
+  <ProgressBar
+      android:id="@+id/progressBar"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_centerInParent="true"
+      android:visibility="gone"
+      />
+
+  <TextView
+      android:id="@+id/errorView"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_centerInParent="true"
+      android:text="Loading Failed"
+      android:visibility="gone"
+      style="@style/TextAppearance.AppCompat.Medium"
+      />
 
 
 </RelativeLayout>
