--- a/app/src/main/res/layout/fragment_city_list.xml
+++ b/app/src/main/res/layout/fragment_city_list.xml
@@ -3,38 +3,41 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    >
 
 
-    <EditText
-        android:id="@+id/searchET"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="8dp"
-        android:background="@drawable/rounded_edittext"
-        android:drawableEnd="@drawable/ic_search_black_24dp"
-        android:fontFamily="@font/roboto"
-        android:hint="type to filter"
-        android:imeOptions="actionSearch"
-        android:inputType="text"
-        android:maxLines="1"
-        android:padding="12dp"
-        android:textSize="18sp" />
+  <EditText
+      android:id="@+id/searchET"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_marginBottom="8dp"
+      android:layout_marginEnd="16dp"
+      android:layout_marginStart="16dp"
+      android:layout_marginTop="8dp"
+      android:background="@drawable/rounded_edittext"
+      android:drawableEnd="@drawable/ic_search_black_24dp"
+      android:fontFamily="@font/roboto"
+      android:hint="type to filter"
+      android:imeOptions="actionSearch"
+      android:inputType="text"
+      android:maxLines="1"
+      android:padding="12dp"
+      android:textSize="18sp"
+      />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/list"
-        android:name="com.mohamedmenasy.backbasetask.CityFragment"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        tools:context=".features.clitylist.view.CityFragment"
-        tools:listitem="@layout/list_item_city" />
+  <androidx.recyclerview.widget.RecyclerView
+      android:id="@+id/list"
+      android:name="com.mohamedmenasy.backbasetask.CityFragment"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:layout_marginEnd="16dp"
+      android:layout_marginStart="16dp"
+      tools:context=".features.clitylist.view.CityFragment"
+      tools:listitem="@layout/list_item_city"
+      />
 </LinearLayout>
 
-<!--
-    android:drawableEnd="@android:drawable/ic_menu_search"
--->
+    <!--
+        android:drawableEnd="@android:drawable/ic_menu_search"
+    -->
